file upload base level implementation

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -24,5 +24,12 @@
         ]
       }
     }
+  },
+  "storage": {
+    "s3nuberassignmentstorage3a699220": {
+      "service": "S3",
+      "providerPlugin": "awscloudformation",
+      "dependsOn": []
+    }
   }
 }
